[tool.poetry]
name = "deepdive"
version = "0.1.0"
description = ""
authors = ["kurakura967 <hiroki.kurasawa@zozo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
grpcio = "^1.56.0"
grpcio-tools = "^1.56.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
